Replace AppIcon and SearchBar

--- a/BirthYAY/BirthYAY.UI/BirthYAY.UI.csproj
+++ b/BirthYAY/BirthYAY.UI/BirthYAY.UI.csproj
@@ -31,8 +31,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" Color="#FFFFFF" BaseSize="100,100" />
-
+    <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" />
+    
 		<!-- Splash Screen -->
     <MauiSplashScreen Include="Resources\Splash\logo.svg" Color="#F5F5F5" BaseSize="128,100" />
     
@@ -58,6 +58,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\RoundedSearchBar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Resources\Styles\AppStyles.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
